# cmake-init-codegen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/: bytes.txt
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: codegen_test.cpp
tools/parse/: CMakeLists.txt  main.cpp
